add Java 17 IllegalAccessError Troubleshooting